--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -2,6 +2,9 @@
   "44pMfw": {
     "defaultMessage": "Скрыть"
   },
+  "7aec0X": {
+    "defaultMessage": "Кнопка"
+  },
   "8xa/OX": {
     "defaultMessage": "Кликни вне этого элемента"
   },
