--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -1,5 +1,6 @@
 {
   "44pMfw": "Скрыть",
+  "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
