--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -1,6 +1,7 @@
 {
   "44pMfw": "Скрыть",
   "4giL8F": "Открыть Drawer",
+  "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
