--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -8,8 +8,10 @@
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
   "L0LsrI": "Какой-то контент",
+  "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
   "RwqXf6": "Показать",
   "hRe4Lb": "Открыть/Закрыть Popper",
+  "l775qE": "Открыть Popper",
   "n4Y9Sg": "Открыть диалог"
 }
