--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -1,14 +1,14 @@
 {
   "44pMfw": "Скрыть",
-  "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
   "L0LsrI": "Какой-то контент",
+  "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
   "RwqXf6": "Показать",
-  "hRe4Lb": "Открыть/Закрыть Popper",
+  "l775qE": "Открыть Popper",
   "n4Y9Sg": "Открыть диалог"
 }
