--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -26,8 +26,14 @@
   "OpBahx": {
     "defaultMessage": "Открыть popper"
   },
+  "QmljCN": {
+    "defaultMessage": "Выбрано: {selected}"
+  },
   "RwqXf6": {
     "defaultMessage": "Показать"
+  },
+  "gwIXyk": {
+    "defaultMessage": "Ничего не выбрано"
   },
   "l775qE": {
     "defaultMessage": "Открыть Popper"
