--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -8,7 +8,9 @@
   "L0LsrI": "Какой-то контент",
   "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
+  "QmljCN": "Выбрано: {selected}",
   "RwqXf6": "Показать",
+  "gwIXyk": "Ничего не выбрано",
   "l775qE": "Открыть Popper",
   "n4Y9Sg": "Открыть диалог"
 }
