--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -10,7 +10,9 @@
   "L0LsrI": "Какой-то контент",
   "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
+  "QmljCN": "Выбрано: {selected}",
   "RwqXf6": "Показать",
+  "gwIXyk": "Ничего не выбрано",
   "hRe4Lb": "Открыть/Закрыть Popper",
   "l775qE": "Открыть Popper",
   "n4Y9Sg": "Открыть диалог"
