--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -1,5 +1,8 @@
 {
+  "+mqMMV": "Цвета",
+  "2fINQ9": "Темы оформления",
   "44pMfw": "Скрыть",
+  "4SjODy": "Флаги стран",
   "4giL8F": "Открыть Drawer",
   "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
@@ -7,13 +10,28 @@
   "DHVnVh": "закрыть диалог",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
+  "GfEP0g": "Поверхность",
+  "J4Mxi4": "Модальные окна",
+  "K9vWf3": "Подсветка подстроки",
   "L0LsrI": "Какой-то контент",
   "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
   "QmljCN": "Выбрано: {selected}",
   "RwqXf6": "Показать",
+  "T9uJ2Q": "Бейдж",
+  "UpmoXl": "Автокомплит",
+  "WUq8iQ": "Таблица",
+  "Y2i5Fd": "Popper",
+  "YaMZGV": "Меню",
+  "b+Rsl5": "Поле ввода телефона",
+  "bvxjPH": "Типографика",
   "gwIXyk": "Ничего не выбрано",
   "hRe4Lb": "Открыть/Закрыть Popper",
+  "i3OiMA": "Индикатор загрузки",
   "l775qE": "Открыть Popper",
-  "n4Y9Sg": "Открыть диалог"
+  "n48pl/": "Маскированное поле",
+  "n4Y9Sg": "Открыть диалог",
+  "sfDpMH": "Текстовое поле",
+  "tfwWYu": "Click outside",
+  "whQBin": "Календарь"
 }
