Texterea component docs and examples

--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -56,6 +56,9 @@
   "T9uJ2Q": {
     "defaultMessage": "Бейдж"
   },
+  "UOjU64": {
+    "defaultMessage": "Текстовое поле textarea"
+  },
   "UpmoXl": {
     "defaultMessage": "Автокомплит"
   },
