--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -18,6 +18,7 @@
   "QmljCN": "Выбрано: {selected}",
   "RwqXf6": "Показать",
   "T9uJ2Q": "Бейдж",
+  "UOjU64": "Текстовое поле textarea",
   "UpmoXl": "Автокомплит",
   "WUq8iQ": "Таблица",
   "Y2i5Fd": "Popper",
