--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -1,13 +1,16 @@
 {
+  "+glFq7": "Сегодня",
   "+mqMMV": "Цвета",
   "2fINQ9": "Темы оформления",
   "44pMfw": "Скрыть",
+  "4IywCD": "Дата не выбрана",
   "4SjODy": "Флаги стран",
   "4giL8F": "Открыть Drawer",
   "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
+  "Ewp5W2": "Контроллируемый",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
   "GfEP0g": "Поверхность",
@@ -23,6 +26,7 @@
   "UpmoXl": "Автокомплит",
   "WUq8iQ": "Таблица",
   "Y2i5Fd": "Popper",
+  "YTTz6q": "Контролли руемый",
   "YaMZGV": "Меню",
   "b+Rsl5": "Поле ввода телефона",
   "bvxjPH": "Типографика",
@@ -34,5 +38,6 @@
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
+  "vfmGvM": "Выбрана дата: {date}",
   "whQBin": "Календарь"
 }
