--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -1,12 +1,15 @@
 {
+  "+glFq7": "Сегодня",
   "+mqMMV": "Цвета",
   "2fINQ9": "Темы оформления",
   "44pMfw": "Скрыть",
+  "4IywCD": "Дата не выбрана",
   "4SjODy": "Флаги стран",
   "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
+  "Ewp5W2": "Контроллируемый",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
   "GfEP0g": "Поверхность",
@@ -32,5 +35,6 @@
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
+  "vfmGvM": "Выбрана дата: {date}",
   "whQBin": "Календарь"
 }
