--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -95,6 +95,9 @@
   "l775qE": {
     "defaultMessage": "Открыть Popper"
   },
+  "lnCJFM": {
+    "defaultMessage": "Сбросить"
+  },
   "n48pl/": {
     "defaultMessage": "Маскированное поле"
   },
