--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -34,6 +34,7 @@
   "hRe4Lb": "Открыть/Закрыть Popper",
   "i3OiMA": "Индикатор загрузки",
   "l775qE": "Открыть Popper",
+  "lnCJFM": "Сбросить",
   "n48pl/": "Маскированное поле",
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
