--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -31,6 +31,7 @@
   "gwIXyk": "Ничего не выбрано",
   "i3OiMA": "Индикатор загрузки",
   "l775qE": "Открыть Popper",
+  "lnCJFM": "Сбросить",
   "n48pl/": "Маскированное поле",
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
