--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -116,6 +116,9 @@
   "whQBin": {
     "defaultMessage": "Календарь"
   },
+  "zuByI+": {
+    "defaultMessage": "Date Picker"
+  },
   "YTTz6q": {
     "defaultMessage": "Контролли руемый"
   },
