--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -40,5 +40,6 @@
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
   "vfmGvM": "Выбрана дата: {date}",
-  "whQBin": "Календарь"
+  "whQBin": "Календарь",
+  "zuByI+": "Date Picker"
 }
