--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -83,6 +83,9 @@
   "YaMZGV": {
     "defaultMessage": "Меню"
   },
+  "aVcslC": {
+    "defaultMessage": "Аватар"
+  },
   "b+Rsl5": {
     "defaultMessage": "Поле ввода телефона"
   },
