--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -29,6 +29,7 @@
   "Y2i5Fd": "Popper",
   "YTTz6q": "Контролли руемый",
   "YaMZGV": "Меню",
+  "aVcslC": "Аватар",
   "b+Rsl5": "Поле ввода телефона",
   "bvxjPH": "Типографика",
   "gwIXyk": "Ничего не выбрано",
