--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -27,6 +27,7 @@
   "WUq8iQ": "Таблица",
   "Y2i5Fd": "Popper",
   "YaMZGV": "Меню",
+  "aVcslC": "Аватар",
   "b+Rsl5": "Поле ввода телефона",
   "bvxjPH": "Типографика",
   "gwIXyk": "Ничего не выбрано",
