--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -3,6 +3,7 @@
   "+glFq7": "Сегодня",
   "+mqMMV": "Цвета",
   "2fINQ9": "Темы оформления",
+  "3NyjbW": "Выбрана дата: {value}",
   "44pMfw": "Скрыть",
   "4IywCD": "Дата не выбрана",
   "4SjODy": "Флаги стран",
@@ -11,6 +12,7 @@
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
+  "DtpCdE": "к 9 Мая",
   "Ewp5W2": "Контроллируемый",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
