--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -3,14 +3,14 @@
   "+glFq7": "Сегодня",
   "+mqMMV": "Цвета",
   "2fINQ9": "Темы оформления",
+  "3NyjbW": "Выбрана дата: {value}",
   "44pMfw": "Скрыть",
-  "4IywCD": "Дата не выбрана",
   "4SjODy": "Флаги стран",
   "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
-  "Ewp5W2": "Контроллируемый",
+  "DtpCdE": "к 9 Мая",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
   "GfEP0g": "Поверхность",
@@ -32,12 +32,10 @@
   "gwIXyk": "Ничего не выбрано",
   "i3OiMA": "Индикатор загрузки",
   "l775qE": "Открыть Popper",
-  "lnCJFM": "Сбросить",
   "n48pl/": "Маскированное поле",
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
-  "vfmGvM": "Выбрана дата: {date}",
   "whQBin": "Календарь",
   "zuByI+": "Date Picker"
 }
