--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -11,11 +11,11 @@
   "2fINQ9": {
     "defaultMessage": "Темы оформления"
   },
+  "3NyjbW": {
+    "defaultMessage": "Выбрана дата: {value}"
+  },
   "44pMfw": {
     "defaultMessage": "Скрыть"
-  },
-  "4IywCD": {
-    "defaultMessage": "Дата не выбрана"
   },
   "4SjODy": {
     "defaultMessage": "Флаги стран"
@@ -32,8 +32,8 @@
   "DHVnVh": {
     "defaultMessage": "закрыть диалог"
   },
-  "Ewp5W2": {
-    "defaultMessage": "Контроллируемый"
+  "DtpCdE": {
+    "defaultMessage": "к 9 Мая"
   },
   "Fm08lU": {
     "defaultMessage": "Сменить тему"
@@ -98,9 +98,6 @@
   "l775qE": {
     "defaultMessage": "Открыть Popper"
   },
-  "lnCJFM": {
-    "defaultMessage": "Сбросить"
-  },
   "n48pl/": {
     "defaultMessage": "Маскированное поле"
   },
@@ -113,14 +110,23 @@
   "tfwWYu": {
     "defaultMessage": "Click outside"
   },
-  "vfmGvM": {
-    "defaultMessage": "Выбрана дата: {date}"
-  },
   "whQBin": {
     "defaultMessage": "Календарь"
   },
   "zuByI+": {
     "defaultMessage": "Date Picker"
+  },
+  "4IywCD": {
+    "defaultMessage": "Дата не выбрана"
+  },
+  "Ewp5W2": {
+    "defaultMessage": "Контроллируемый"
+  },
+  "lnCJFM": {
+    "defaultMessage": "Сбросить"
+  },
+  "vfmGvM": {
+    "defaultMessage": "Выбрана дата: {date}"
   },
   "YTTz6q": {
     "defaultMessage": "Контролли руемый"
