--- a/packages/ui-kit-website/src/lang/en-US.json
+++ b/packages/ui-kit-website/src/lang/en-US.json
@@ -80,6 +80,9 @@
   "Y2i5Fd": {
     "defaultMessage": "Popper"
   },
+  "YHFvoS": {
+    "defaultMessage": "Открыть календарь"
+  },
   "YaMZGV": {
     "defaultMessage": "Меню"
   },
