--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -29,6 +29,7 @@
   "UpmoXl": "Автокомплит",
   "WUq8iQ": "Таблица",
   "Y2i5Fd": "Popper",
+  "YHFvoS": "Открыть календарь",
   "YTTz6q": "Контролли руемый",
   "YaMZGV": "Меню",
   "b+Rsl5": "Поле ввода телефона",
