--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -26,6 +26,7 @@
   "UpmoXl": "Автокомплит",
   "WUq8iQ": "Таблица",
   "Y2i5Fd": "Popper",
+  "YHFvoS": "Открыть календарь",
   "YaMZGV": "Меню",
   "b+Rsl5": "Поле ввода телефона",
   "bvxjPH": "Типографика",
