--- a/packages/ui-kit-website/src/lang/ru-RU.json
+++ b/packages/ui-kit-website/src/lang/ru-RU.json
@@ -113,8 +113,14 @@
   "tfwWYu": {
     "defaultMessage": "Click outside"
   },
+  "wBODsZ": {
+    "defaultMessage": "Текущая дата в шаблоном {template} — {result}"
+  },
   "whQBin": {
     "defaultMessage": "Календарь"
+  },
+  "yeuMJs": {
+    "defaultMessage": "Строка 22.02.2003 распарсенная с шаблоном {template} — {result}"
   },
   "zuByI+": {
     "defaultMessage": "Date Picker"
