--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -37,6 +37,8 @@
   "n4Y9Sg": "Открыть диалог",
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
+  "wBODsZ": "Текущая дата в шаблоном {template} — {result}",
   "whQBin": "Календарь",
+  "yeuMJs": "Строка 22.02.2003 распарсенная с шаблоном {template} — {result}",
   "zuByI+": "Date Picker"
 }
