--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -23,6 +23,7 @@
   "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
   "QmljCN": "Выбрано: {selected}",
+  "RZ1xzS": "Current date with template {template} — {result}",
   "RwqXf6": "Показать",
   "T9uJ2Q": "Бейдж",
   "UOjU64": "Текстовое поле textarea",
@@ -37,6 +38,7 @@
   "gwIXyk": "Ничего не выбрано",
   "hRe4Lb": "Открыть/Закрыть Popper",
   "i3OiMA": "Индикатор загрузки",
+  "iuBei9": "String 22.02.2003 parsed with template {template} — {result}",
   "l775qE": "Открыть Popper",
   "lnCJFM": "Сбросить",
   "n48pl/": "Маскированное поле",
@@ -44,6 +46,8 @@
   "sfDpMH": "Текстовое поле",
   "tfwWYu": "Click outside",
   "vfmGvM": "Выбрана дата: {date}",
+  "wBODsZ": "Текущая дата в шаблоном {template} — {result}",
   "whQBin": "Календарь",
+  "yeuMJs": "Строка 22.02.2003 распарсенная с шаблоном {template} — {result}",
   "zuByI+": "Date Picker"
 }
