--- a/packages/ui-kit-website/src/translations/en-US.json
+++ b/packages/ui-kit-website/src/translations/en-US.json
@@ -38,6 +38,7 @@
   "gwIXyk": "Ничего не выбрано",
   "hRe4Lb": "Открыть/Закрыть Popper",
   "i3OiMA": "Индикатор загрузки",
+  "iNeTTO": "Содержание",
   "iuBei9": "String 22.02.2003 parsed with template {template} — {result}",
   "l775qE": "Открыть Popper",
   "lnCJFM": "Сбросить",
