--- a/packages/ui-kit-website/src/translations/ru-RU.json
+++ b/packages/ui-kit-website/src/translations/ru-RU.json
@@ -1,44 +1,24 @@
 {
-  "+M2Tj9": "Селектбокс",
   "+glFq7": "Сегодня",
-  "+mqMMV": "Цвета",
-  "2fINQ9": "Темы оформления",
   "3NyjbW": "Выбрана дата: {value}",
   "44pMfw": "Скрыть",
-  "4SjODy": "Флаги стран",
-  "7aec0X": "Кнопка",
   "8xa/OX": "Кликни вне этого элемента",
   "Br9+8Z": "Какой-либо контент",
   "DHVnVh": "закрыть диалог",
   "DtpCdE": "к 9 Мая",
   "Fm08lU": "Сменить тему",
   "G0WBwd": "Всего кликов: {counter}",
-  "GfEP0g": "Поверхность",
-  "J4Mxi4": "Модальные окна",
-  "K9vWf3": "Подсветка подстроки",
   "L0LsrI": "Какой-то контент",
   "LUCzCR": "Выберите",
   "OpBahx": "Открыть popper",
   "QmljCN": "Выбрано: {selected}",
   "RwqXf6": "Показать",
-  "T9uJ2Q": "Бейдж",
-  "UOjU64": "Текстовое поле textarea",
-  "UpmoXl": "Автокомплит",
-  "WUq8iQ": "Таблица",
-  "Y2i5Fd": "Popper",
   "YHFvoS": "Открыть календарь",
-  "YaMZGV": "Меню",
-  "b+Rsl5": "Поле ввода телефона",
-  "bvxjPH": "Типографика",
   "gwIXyk": "Ничего не выбрано",
-  "i3OiMA": "Индикатор загрузки",
+  "iNeTTO": "Содержание",
   "l775qE": "Открыть Popper",
-  "n48pl/": "Маскированное поле",
   "n4Y9Sg": "Открыть диалог",
-  "sfDpMH": "Текстовое поле",
-  "tfwWYu": "Click outside",
   "wBODsZ": "Текущая дата в шаблоном {template} — {result}",
   "whQBin": "Календарь",
-  "yeuMJs": "Строка 22.02.2003 распарсенная с шаблоном {template} — {result}",
-  "zuByI+": "Date Picker"
+  "yeuMJs": "Строка 22.02.2003 распарсенная с шаблоном {template} — {result}"
 }
